Fixed bug where arrow heads sometimes point in the wrong direction. Added Documentation. Made better use of StringBuilders to prevent excessive construction of strings.
git-svn-id: https://taverna.googlecode.com/svn/taverna/ui/net.sf.taverna.t2.ui-components/trunk@8378 bf327186-88b3-11dd-a302-d386e5130c1c